--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "base",
+  "name": "hub-rp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,8 +11,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "critters": "^0.0.23",
     "framer-motion": "^12.20.2",
     "next": "15.3.4",
+    "next-auth": "^4.24.11",
     "prettier": "^3.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -27,6 +30,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "prisma": "^6.14.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
