--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "prisma:migrate": "prisma migrate dev --name migrate",
     "prisma:reset": "prisma migrate reset --force --skip-seed",
     "prisma:clear": "rm -rf prisma/migrations && rm -rf node_modules/.prisma",
-    "prisma:dev_update": "npm run prisma:clear && npm run prisma:reset && npm run prisma:migrate && npm run prisma:generate",
-    "redis:start": "sudo systemctl enable redis && sudo systemctl start redis && node server.js"
+    "prisma:dev_update": "npm run prisma:clear && npm run prisma:reset && npm run prisma:migrate && npm run prisma:generate"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
