--- a/ws-server/package.json
+++ b/ws-server/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@prisma/client": "^6.14.0",
+    "prisma": "^6.14.0",
     "redis": "^5.8.1",
     "ws": "^8.18.3"
   }
