--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,9 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "scripts/test-prisma.js"
-, "src/lib/prisma.js", "src/lib/prisma.js"  ],
+    "scripts/test-prisma.js",
+    "src/lib/prisma.js",
+    "src/lib/prisma.js"
+  ],
   "exclude": ["node_modules"]
 }
