--- a/bot/tsconfig.bot.json
+++ b/bot/tsconfig.bot.json
@@ -1,9 +1,8 @@
 {
-  "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "target": "ES2022",
-    "outDir": "../dist",
-    "rootDir": "../",
+    "outDir": "./dist",
+    "rootDir": "./",
     "noEmit": false,
     "module": "NodeNext",
     "composite": false,
@@ -27,8 +26,6 @@
   },
   "include": [
     "./**/*",
-    "../src/types/**/*",
-    "../types/**/*.d.ts",
   ],
   "exclude": ["../node_modules", "../dist"]
 }
