--- a/package.json
+++ b/package.json
@@ -10,16 +10,23 @@
     "start": "next start",
     "lint": "next lint",
     "dev:all": "concurrently \"npm run server:dev\" \"npm run dev\"",
+    "ws": "nodemon ws-server/server.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name migrate",
     "prisma:reset": "prisma migrate reset --force --skip-seed",
     "prisma:clear": "rm -rf prisma/migrations && rm -rf node_modules/.prisma",
-    "prisma:dev_update": "npm run prisma:clear && npm run prisma:reset && npm run prisma:migrate && npm run prisma:generate"
+    "prisma:dev_update": "npm run prisma:clear && npm run prisma:reset && npm run prisma:migrate && npm run prisma:generate",
+    "bot:build": "rimraf bot/dist && tsc -p bot/tsconfig.bot.json && tsc-alias -p bot/tsconfig.bot.json && npm run bot:minify",
+    "bot:minify": "find bot/dist -type f -name '*.js' -exec terser --compress --mangle --module -o {} {} \\;",
+    "bot:dev": "npm run bot:build && NODE_TLS_REJECT_UNAUTHORIZED=0 node bot/dist/index.js",
+    "bot:start": "clear && NODE_ENV=production node bot/dist/index.js ",
+    "bot:clean": "rimraf bot/dist && clear"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "critters": "^0.0.23",
     "discord.js": "^14.21.0",
+    "express": "^5.1.0",
     "express-serve-static-core": "^0.1.1",
     "framer-motion": "^12.20.2",
     "ioredis": "^5.7.0",
@@ -30,8 +37,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "redis": "^5.8.1",
+    "rimraf": "^6.0.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "terser": "^5.43.1",
     "ws": "^8.18.3"
   },
   "devDependencies": {
