--- a/bot/tsconfig.bot.json
+++ b/bot/tsconfig.bot.json
@@ -24,8 +24,6 @@
     "skipLibCheck": true,
     "allowJs": true
   },
-  "include": [
-    "./**/*",
-  ],
+  "include": ["./**/*"],
   "exclude": ["../node_modules", "../dist"]
 }
