--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@types/qrcode": "^1.5.5",
+    "@types/speakeasy": "^2.0.10",
     "critters": "^0.0.23",
     "discord.js": "^14.21.0",
     "express": "^5.1.0",
@@ -35,13 +37,16 @@
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "prettier": "^3.6.2",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.18",
     "redis": "^5.8.1",
     "rimraf": "^6.0.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
+    "speakeasy": "^2.0.0",
     "terser": "^5.43.1",
     "ws": "^8.18.3"
   },
