--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-qr-code": "^2.0.18",
+    "recharts": "^3.1.2",
     "redis": "^5.8.1",
     "rimraf": "^6.0.1",
     "socket.io": "^4.8.1",
