--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "start": "next start",
     "lint": "next lint",
     "dev:all": "concurrently \"npm run server:dev\" \"npm run dev\"",
-    "ws": "nodemon ws-server/server.js",
+    "ws": "node ws-server/server.js",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev --name migrate",
     "prisma:reset": "prisma migrate reset --force --skip-seed",
     "prisma:clear": "rm -rf prisma/migrations && rm -rf node_modules/.prisma",
     "prisma:dev_update": "npm run prisma:clear && npm run prisma:reset && npm run prisma:migrate && npm run prisma:generate",
-    "bot:build": "rimraf bot/dist && tsc -p bot/tsconfig.bot.json && tsc-alias -p bot/tsconfig.bot.json && npm run bot:minify",
+    "bot:build": "rimraf bot/dist && tsc -p bot/tsconfig.bot.json && npm run bot:minify",
     "bot:minify": "find bot/dist -type f -name '*.js' -exec terser --compress --mangle --module -o {} {} \\;",
     "bot:dev": "npm run bot:build && NODE_TLS_REJECT_UNAUTHORIZED=0 node bot/dist/index.js",
     "bot": "clear && NODE_ENV=production node bot/dist/index.js ",
