--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "socket.io-client": "^4.8.1",
     "speakeasy": "^2.0.0",
     "terser": "^5.43.1",
+    "uuid": "^11.1.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
