--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/express": "^5.0.3",
     "@types/node": "^20",
     "@types/react": "^19",
@@ -64,6 +63,7 @@
     "concurrently": "^9.2.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "postcss": "^8.5.6",
     "prisma": "^6.14.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
